# Pure-ECS-Data

./: Cargo.toml
examples/: counter.rs  firewheel_test.rs  osc.rs  patch1.rs  patch2.rs
src/: lib.rs  patch.rs
src/node/: connections.rs  data.rs  mod.rs  node_component.rs  nodes.rs
src/node/nodes/: mod.rs
src/node/nodes/control/: bang.rs  f.rs  message.rs  mod.rs  msg.rs  number.rs  print.rs  sum.rs  trigger.rs
src/node/nodes/signal/: dac.rs  mod.rs  mult.rs  noise.rs  osc.rs
src/nodes/: connections.rs  data.rs  mod.rs  node_component.rs  node_impls.rs
src/patch/: inputs.rs  loading.rs  mod.rs
src/patch/macros/: connection.rs  mod.rs  node_creation.rs  nodes.rs
