[package]
name = "pure_ecs_data"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = {version = "0.18.1", features = ["hotpatching", "debug"]}
# bevy_seedling = "0.7.1"
bevy_seedling = {git = "https://github.com/CorvusPrudens/bevy_seedling", branch = "connection-fix"}
const_guards = "0.1.3"
firewheel = "0.10.0"
paste = "1.0.15"
seq-macro = "0.3.6"
